# PharmaSFO

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  design-brief.md  docker-compose.yml  documentation.md  improvements.md  manage.py  pyproject.toml
PharmaSFO/: asgi.py  settings.py  urls.py  wsgi.py
api/: api.py
daily_coverage/: admin.py  apps.py  forms.py  models.py  views.py
daily_coverage/migrations/: 0001_initial.py  0002_chemistcoverage_stockistcoverage.py  0003_chemist_stockist.py  0004_dailycoverage_work_day.py
daily_coverage/templatetags/: dc_tags.py
doctor_employee_relation/: admin.py  apps.py  models.py  views.py
doctor_employee_relation/migrations/: 0001_initial.py  0002_doctoremployeerelation_msl_number.py  0003_doctoremployeerelation_relation_date.py  0004_doctoremployeerelation_status.py
doctors/: admin.py  forms.py  models.py  views.py
doctors/migrations/: 0001_initial.py  0002_doctor_specialization.py  0003_doctor_email_doctor_phone.py  0004_hospital_doctor_hospital_and_more.py  0005_backfill_doctor_hospital.py  0006_doctor_hospital_required.py
lumo/design_handoff_lumo_sfa/: README.md  calendar.html  home.html  index.html  tokens.css
reports/: views.py
scripts/: tunnel_watchdog.sh
static/css/: app.css  style.css
static/js/: bs-date.js  month-picker.js
static/lumo/: components.css  lumo.js
templates/: 403.html  404.html  base.html  dashboard.html
templates/partials/: nav.html
tour_plans/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
users/: admin.py  context_processors.py  forms.py  models.py  views.py
(+28 files in other folders)
